--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="nav-card" id="about">
       <h2>Service</h2>
       <p>
-        Tech's Voice os a tech-driven copmpany focused on innovative software
+        Tech's Voice os a tech-driven company focused on innovative software
         solution and digital empowerment. We build tools that solve real world
         problem,combining passion with purpose.
       </p>
@@ -83,3 +83,4 @@
     <script src="loader.js"></script>
   </body>
 </html>
+
