--- a/about us.html
+++ b/about us.html
@@ -24,7 +24,7 @@
       <p class="nav-card">
         Tech's-Voice is a visionary digital-driven company focused on
         solving real-world problem using AI-power tools. Our mission
-        id to protect job seeker globally by detecting fake job offer and scams. 
+        is to protect job seeker globally by detecting fake job offer and scams. 
       </p>
       </div>
       <div class="nav-card">
@@ -53,28 +53,28 @@
         <div class="member">
         <img src="texter.jpg" alt="Tester"/>
         <h3>Tester</h3>
-        <p>checking an verifying all input for validation.</p>
+        <p>Checking and verifying all input for validation.</p>
       </div>
         <div class="member">
         <img src="it-con.jpg" alt="IT-consultance"/>
         <h3>IT-consultance</h3>
-        <p>consult with us ur bussiness for good ideals.</p>
+        <p>Consult with us your bussiness for good ideals.</p>
       </div>
         <div class="member">
         <img src="robotic.jpg" alt="robotic"/>
         <h3>robotics</h3>
-        <p>building tools for fast and reliable work functionality.</p>
+        <p>Building tools for fast and reliable work functionality.</p>
       </div>
        <div class="member">
         <img src="cs-devops.jpg" alt="software Developer"/>
-        <h3>software Developer</h3>
-        <p>write code for friendly user interface and experience</p>
+        <h3>Software Developer</h3>
+        <p>Write code for friendly user interface and experience</p>
       </div>
        
         <div class="member">
         <img src="problem-solving.jpg" alt="problem-solving"/>
-        <h3>problem-solving</h3>
-        <p>It not Just about coding is about solving real worl problem.</p>
+        <h3>Problem-solving</h3>
+        <p>It not Just about coding is about solving real world problem.</p>
       </div>
     </section>
 
@@ -100,3 +100,4 @@
     <script src="loader.js"></script>
   </body>
 </html>
+
