--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     </div>
     <header>
         <h1>Tech's-Voice Blog</h1>
-        <p>Update inniovation, and ideals from our team</p>
+        <p>Update innovation, and ideals from our team</p>
          <div class="nav-links">
           <a href="index.html">Home</a>
           <a href="service.html">service</a>
@@ -84,4 +84,5 @@
     </footer>
     <script src="blog.js"></script>
 </body>
+
 </html>
