--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
     <header class="header">
       <h1>Our Service</h1>
       <nav class="navbar">
-        <div class="logo">Tech's voive</div>
+        <div class="logo">Tech's voice</div>
         <div class="nav-links">
           <a href="index.html">Home</a>
           <a href="about us.html">About us</a>
@@ -28,12 +28,12 @@
       </div>
       <div class="service-card">
         <h3>Custom Software Development</h3>
-        <p>We design and devep software tailored to your specific
+        <p>We design and develop software tailored to your specific
         business need from automation tools to full-scale platform.</p>
       </div>
       <div class="service-card">
         <h3>AI-Powererd Solutions</h3>
-        <p>Using the power of artificial intelligent,we vreate smart 
+        <p>Using the power of artificial intelligent,we create smart 
           system like scam detection,chatbot,and data-driven tools that solve real.
           world problems
         </p>
@@ -58,7 +58,7 @@
       </div> 
        <div class="service-card">
         <h3>Tech Consultancy & Strategy</h3>
-        <p>We guild individuals, startups and bussiness in making the 
+        <p>We guild individuals, startups and business in making the 
           right tech decisions, scaling  ideals,and building future-ready solution.
         </p>
       </div>
@@ -69,7 +69,7 @@
       </div>
        <div class="service-card">
         <h3>web application development</h3>
-        <p>Create responsive and robust web apps that deliver seamless experience accross devices.
+        <p>Create responsive and robust web apps that deliver seamless experience across devices.
         </p>
       </div>
        <div class="service-card">
@@ -131,3 +131,4 @@
     <script src="loader.js"></script>
   </body>
 </html>
+
